#112 - Upgrade to JDK 11.
Switched to var keyword and List.of(…).

Updated instructions in the readme.